# pythonProject2

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
apps/auth/: serializers.py  urls.py  views.py
apps/auto_parks/: serializers.py  views.py
apps/cars/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0003_carsmodel_created_at_carsmodel_updated_at.py  0006_alter_carsmodel_options_carsmodel_auto_park.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_rename_profile_profilemodel.py
backend/apps/auth/: urls.py  views.py
backend/apps/auto_parks/: models.py  urls.py  views.py
backend/apps/cars/: consumers.py  filter.py  models.py  serializers.py  services.py  (+2 more)
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: paginations.py
backend/templates/: base.html  spam.html  test.html
cars/: filter.py  models.py  serializers.py  views.py
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_config/: __init__.py  email_conf.py  rest_conf.py
core/: models.py  paginations.py
core/enums/: action_token_enum.py
core/handlers/: error_handler.py
core/permissions/: is_admin_or_write_only.py
core/services/: email_service.py  jwt_service.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
templates/: recovery.html  register.html
(+45 files in other folders)
